Revision history for Dist-Zilla-Plugin-CheckExtraTests

{{$NEXT}}

0.004     2010-04-08 14:51:28 EST5EDT

    - manually set prereqs instead of using
      auto-detection to avoid a Dist::Zilla
      BUILD_REQUIRES bug

0.003     2010-04-07 14:02:34 EST5EDT

    - updated tests for Dist::Zilla 2.000+

    - switched from File::chdir to File::pushd

0.002     2010-03-23 19:28:48 EST5EDT

    - fixed problem in release check

0.001     2010-03-22 01:10:12 EST5EDT


    - first draft